Add some useless information to "about me" section

--- a/index.html
+++ b/index.html
@@ -93,12 +93,14 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>I'm a Senior Software Engineer highly passionate about Android. I started learning about Android back in late 2009 and
+              built my first couple of Android applications as part of my Bachelor's thesis. Since 2010, I've been working as Android
+              Software Engineer on exciting projects.
+              <br><br>
+              Currently, I'm working for eBay Kleinanzeigen, Germany's leading classifieds platform. The app is downloaded more than 20
+              million times, featured by Google Play multiple times, and it has a rating of 4.4 stars on Google Play Store.
+              <br><br>
+              If you want to get in contact with me, just drop me a line.
             </p>
 
             <div class="row">
@@ -311,13 +313,13 @@
 				  <ul class="skills">
 					  <li><span class="bar-expand android"></span><em>Android Development</em></li>
             <li><span class="bar-expand java"></span><em>Java</em></li>
-						<li><span class="bar-expand android_studio"></span><em>Android Studio</em></li>
-						<li><span class="bar-expand gradle"></span><em>Gradle</em></li>
 						<li><span class="bar-expand android_architectural_patterns"></span><em>Android Architectural Patterns</em></li>
+						<li><span class="bar-expand gradle"></span><em>Gradle</em></li>
             <li><span class="bar-expand junit"></span><em>jUnit</em></li>
             <li><span class="bar-expand espresso"></span><em>Android UI Automation with Espresso</em></li>
             <li><span class="bar-expand kanban"></span><em>Kanban</em></li>
             <li><span class="bar-expand git"></span><em>Git</em></li>
+						<li><span class="bar-expand android_studio"></span><em>Android Studio</em></li>
             <li><span class="bar-expand sketch"></span><em>Sketch</em></li>
             <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
 					</ul>
