--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                <div class="twelve columns">
 
                   <h3>eBay Kleinanzeigen</h3>
+		  <p class="info">Android Team Lead <span>&bull;</span> <em class="date">Nov 2017 - Present</em></p>
                   <p class="info">Senior Android Engineer <span>&bull;</span> <em class="date">July 2013 - Present</em></p>
 
                   <p>
