--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               Software Engineer on exciting projects.
               <br><br>
               Currently, I'm working for eBay Kleinanzeigen, Germany's leading classifieds platform. The app is downloaded more than 20
-              million times, featured by Google Play multiple times, and it has a rating of 4.4 stars on Google Play Store.
+              million times, featured by Google Play multiple times, and it has a rating of 4.7 stars on Google Play Store.
               <br><br>
               If you want to get in contact with me, just drop me a line.
             </p>
@@ -144,7 +144,7 @@
                <div class="twelve columns">
 
                   <h3>eBay Kleinanzeigen</h3>
-		  <p class="info">Android Team Lead <span>&bull;</span> <em class="date">Nov 2017 - Present</em></p>
+		  <p class="info">Android Development Team Lead <span>&bull;</span> <em class="date">Nov 2017 - Present</em></p>
                   <p class="info">Senior Android Engineer <span>&bull;</span> <em class="date">July 2013 - Present</em></p>
 
                   <p>
@@ -152,11 +152,11 @@
                     I've been working on eBay Kleinanzeigen's Android application which has a user rating of 4.4 stars out of 5. The application have already been featured multiple times by Google Play Store and provides best in class experience.<br><br>
                     Here are some key technologies and architectural patterns that I've been using during my time at eBay Kleinanzeigen:<br>
                     <ul style="list-style-type:disc;margin-left:20px;">
-                      <li>Model View Presenter (MVP) Architecture</li>
+                      <li>Model View Presenter (MVP) Architecture with Android Architecture Components</li>
                       <li>UI Automation and integration tests using Espresso</li>
                       <li>Unit tests with JUnit, Robolectric &amp; Mockito</li>
                       <li>Backwards compatibility with Android Support Libraries</li>
-                      <li>Https client-server communication</li>
+                      <li>Https client-server communication using Retrofit and RxJava</li>
                       <li>JSON data format, creation and parsing</li>
                       <li>Android standard and custom UI elements</li>
                       <li>Android UI animations</li>
@@ -313,6 +313,7 @@
 
 				  <ul class="skills">
 					  <li><span class="bar-expand android"></span><em>Android Development</em></li>
+            <li><span class="bar-expand kotlin"></span><em>Kotlin</em></li>
             <li><span class="bar-expand java"></span><em>Java</em></li>
 						<li><span class="bar-expand android_architectural_patterns"></span><em>Android Architectural Patterns</em></li>
 						<li><span class="bar-expand gradle"></span><em>Gradle</em></li>
